<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prism</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_activity_grader">GraderActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_text">Prism</string>
    <string name="praise_title">Praise</string>
    <string name="improve_title">Improve</string>
    <string name="focus_title">Focus</string>
    <string name="date_text">Date Text</string>
    <string name="description_commit_feedback">Commit Feedback</string>
    <string name="title_text_fragment">Title Text</string>
    <string name="nux_title">Welcome to Prism</string>
    <string name="nux_description">Prism is an app focused on daily improvement and personal accountability.\nDo better in your work &amp; personal life by building a habit of self-reflection.</string>
    <string name="nux_tag">nux_tag</string>
    <string name="praise_hint">What did you do well?</string>
    <string name="improve_hint">What do you want to improve?</string>
    <string name="focus_hint">3 things to focus on tomorrow</string>
    <string name="reminder_description">If enabled, you\'ll get a reminder every day at this time to grade yourself. Grading at the end of your day is recommended.</string>
    <string name="enable_checkbox_text">Enable Prism reminders?</string>
    <string name="done">Done</string>
    <string name="settings_menu_content_description">Settings menu</string>
    <string name="grade_yourself_content_description">Grade yourself</string>
</resources>
