<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingTop="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <CheckBox
            android:id="@+id/reminder_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enable_checkbox_text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/reminder_description"/>
    <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>
    <Button
            android:id="@+id/done"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/done"/>
</LinearLayout>