<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.phyous.prism.TimelineActivity$PlaceholderFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/titlebar"
                    android:paddingLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <com.phyous.prism.widget.TypefacedTextView
                android:id="@+id/title"
                android:text="@string/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                app:typeface="fonts/Roboto-Light.ttf"/>

        <ImageView
                android:id="@+id/settings"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/settings_menu_content_description"
                android:src="@drawable/abc_ic_menu_moreoverflow_normal_holo_light"/>

        <ImageView
                android:id="@+id/plus_icon"
                android:layout_toLeftOf="@+id/settings"
                android:layout_alignParentTop="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/grade_yourself_content_description"
                android:src="@drawable/plus_selector"/>
    </RelativeLayout>

    <View
            android:id="@+id/div_bar"
            android:layout_below="@id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/background_grey"
            />

    <ListView android:id="@+id/listview"
              android:layout_below="@id/div_bar"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
</RelativeLayout>

